--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,7 @@ project(concurrentes)
 
 add_subdirectory(tp0)
 add_subdirectory(tp1)
+add_subdirectory(tp2)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+add_subdirectory(tp-grupal-01)
