Agrego clase Table que maneja todo lo que queda en la mesa y es compartido por todos los procesos.

--- a/tp-grupal-01/CMakeLists.txt
+++ b/tp-grupal-01/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library(concudaring
 	util/LockFile.cpp
 	util/Utils.cpp
 	Log/Log.cpp
-)
+        game/Table.cpp game/Table.h)
 
 add_executable(tp
 	main.cpp)
