FIX valor de carta. Agregado arbitro (muestra stats cada 1 seg). Log ahora tiene precision en microsegundos. closes #3

--- a/tp-grupal-01/CMakeLists.txt
+++ b/tp-grupal-01/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(concudaring
 	util/LockFile.cpp
 	util/Utils.cpp
         log/Log.cpp
-        game/Table.cpp game/Table.h)
+        game/Table.cpp game/Table.h game/Referee.cpp game/Referee.h)
 
 add_executable(tp
 	main.cpp)
