--- a/tp-grupal-02/CMakeLists.txt
+++ b/tp-grupal-02/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
 project(concurrentes)
 
+add_subdirectory(common-util)
 add_subdirectory(db)
-add_subdirectory(db-client)
