Abstraigo como se envian los mensajes por los 2 canales (query y result). Elimino semaforos

--- a/tp-grupal-02/common-util/CMakeLists.txt
+++ b/tp-grupal-02/common-util/CMakeLists.txt
@@ -8,10 +8,9 @@ add_library(common
     Log.cpp
     LockFile.cpp
     MessageQueue.cpp
-    Semaphore.cpp
     Utils.cpp
     message/Message.cpp
     signals/SIGINT_Handler.cpp
     signals/SignalHandler.cpp
     signals/Process.cpp
-)
+    message/MessageSender.cpp message/MessageSender.h)
