Timeout para conectar al cliente

--- a/tp-grupal-02/common-util/CMakeLists.txt
+++ b/tp-grupal-02/common-util/CMakeLists.txt
@@ -4,13 +4,14 @@ project(concurrentes)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_library(common
-    IpcException.cpp
-    Log.cpp
-    LockFile.cpp
-    MessageQueue.cpp
-    Utils.cpp
-    message/Message.cpp
-    signals/SIGINT_Handler.cpp
-    signals/SignalHandler.cpp
-    signals/Process.cpp
-    message/MessageSender.cpp message/MessageSender.h)
+        IpcException.cpp
+        Log.cpp
+        LockFile.cpp
+        MessageQueue.cpp
+        Utils.cpp
+        SharedMemory.cpp
+        signals/SIGINT_Handler.cpp
+        signals/SignalHandler.cpp
+        signals/Process.cpp
+        message/MessageSender.cpp
+        message/Message.cpp)
