--- a/tp-grupal-02/test/client2.in
+++ b/tp-grupal-02/test/client2.in
@@ -1,4 +1,4 @@
 select * from tabla;
-insert values ("Guido", "Suller", "1523460302");
+insert values("Guido","Suller","1523460302")
 select * from tabla;
 exit
